# dalgi-rust

./: Cargo.toml
examples/: ex_input.rs  ex_macroless.rs  ex_rsdl2_input.rs
src/: input.rs  input_key.rs  lib.rs  notification.rs  rsdl2_input.rs
src/input/: change.rs  description.rs  key.rs  macros.rs  map.rs  mapper.rs  mod.rs  notification.rs  rsdl2_input.rs  signal.rs  state.rs
